# SABCEMM

./: .gitmodules  CMakeLists.txt  Dockerfile  LICENSE  README.md  _agent_8cpp.html  _agent_8cpp__incl.map  _agent_8cpp__incl.md5  _agent_8h.html  _agent_8h__dep__incl.map  _agent_8h__dep__incl.md5  _agent_8h__incl.map  _agent_8h__incl.md5  _agent_8h_source.html  _agent_cross_8cpp.html  _agent_cross_8cpp__incl.map  _agent_cross_8cpp__incl.md5  _agent_cross_8h.html  _agent_cross_8h__dep__incl.map  _agent_cross_8h__dep__incl.md5  _agent_cross_8h__incl.map  _agent_cross_8h__incl.md5  _agent_cross_8h_source.html  _agent_cross_wealth_8cpp.html  _agent_cross_wealth_8cpp__incl.map  _agent_cross_wealth_8cpp__incl.md5  _agent_cross_wealth_8h.html  _agent_cross_wealth_8h__dep__incl.map  _agent_cross_wealth_8h__dep__incl.md5  _agent_cross_wealth_8h__incl.map  _agent_cross_wealth_8h__incl.md5  _agent_cross_wealth_8h_source.html  _agent_e_m_b_8cpp.html  _agent_e_m_b_8cpp__incl.map  _agent_e_m_b_8cpp__incl.md5  _agent_e_m_b_8h.html  _agent_e_m_b_8h__dep__incl.map  _agent_e_m_b_8h__dep__incl.md5  _agent_e_m_b_8h__incl.map  _agent_e_m_b_8h__incl.md5  (+2469 more)
libs/: CMakeLists.txt
libs/boost/: CMakeLists.txt
libs/tinyxml2/: CMakeLists.txt
src/: CMakeLists.txt  FinanceSimulation.cpp  Simulation.cpp  Simulation.h  dokuConfig  doxygen_mainpage.md
src/Agent/: Agent.cpp  Agent.h  AgentCross.cpp  AgentCross.h  AgentCrossWealth.cpp  AgentCrossWealth.h  AgentEMB.cpp  AgentEMB.h  AgentFW.cpp  AgentFW.h  AgentFWChartist.cpp  AgentFWChartist.h  AgentFWFundamentalist.cpp  AgentFWFundamentalist.h  AgentHarras.cpp  AgentHarras.h  AgentLLS.cpp  AgentLLS.h  AgentRII.cpp  AgentRII.h  CMakeLists.txt
src/Algorithms/: CMakeLists.txt
src/DataCollector/: CMakeLists.txt  DataCollector.cpp  DataCollector.h  DataItemCollector.cpp  DataItemCollector.h  DataItemCollectorAmountOfCash.cpp  DataItemCollectorAmountOfCash.h  DataItemCollectorAmountOfStock.cpp  DataItemCollectorAmountOfStock.h  DataItemCollectorEMBGamma.cpp  DataItemCollectorEMBGamma.h  DataItemCollectorExcessDemand.cpp  DataItemCollectorExcessDemand.h  DataItemCollectorFWShares.cpp  DataItemCollectorFWShares.h  DataItemCollectorFWSharesChartist.cpp  DataItemCollectorFWSharesChartist.h  DataItemCollectorFWSharesFundamentalist.cpp  DataItemCollectorFWSharesFundamentalist.h  DataItemCollectorHarrasK.cpp  DataItemCollectorHarrasK.h  DataItemCollectorLLSMemorySpans.cpp  DataItemCollectorLLSMemorySpans.h  DataItemCollectorPrice.cpp  DataItemCollectorPrice.h  DataItemCollectorSwitchableShares.cpp  DataItemCollectorSwitchableShares.h  DataItemCollectorWealth.cpp  DataItemCollectorWealth.h
src/Exceptions/: BadDomainError.h  CMakeLists.txt  MathError.h  NoConvergenceException.h  ParameterConversionError.h  ParameterExistanceError.h
src/ExcessDemandCalculator/: CMakeLists.txt  ExcessDemandCalculator.cpp  ExcessDemandCalculator.h  ExcessDemandCalculatorFW.cpp  ExcessDemandCalculatorFW.h  ExcessDemandCalculatorHarras.cpp  ExcessDemandCalculatorHarras.h  ExcessDemandCalculatorLLS.cpp  ExcessDemandCalculatorLLS.h
src/Group/: CMakeLists.txt  Group.cpp  Group.h
src/Input/: CMakeLists.txt  Input.cpp  Input.h
src/NeighbourhoodGenerator/: CMakeLists.txt  LatticeNeighbourhoodGenerator.cpp  LatticeNeighbourhoodGenerator.h  LatticeNeighbourhoodGeneratorMatlab.cpp  LatticeNeighbourhoodGeneratorMatlab.h  LinearNeigbourhoodGenerator.cpp  LinearNeigbourhoodGenerator.h  NeighbourhoodGenerator.cpp  NeighbourhoodGenerator.h
src/Parameter/: CMakeLists.txt  Parameter.cpp  Parameter.h  ParameterSetAgent.cpp  ParameterSetAgent.h  ParameterSetDataItemCollector.cpp  ParameterSetDataItemCollector.h  ParameterSetDividend.cpp  ParameterSetDividend.h  ParameterSetExcessDemandCalculator.cpp  ParameterSetExcessDemandCalculator.h  ParameterSetPriceCalculator.cpp  ParameterSetPriceCalculator.h  ParameterSetRNG.cpp  ParameterSetRNG.h  ParameterSetShareCalculator.cpp  ParameterSetShareCalculator.h
src/PriceCalculator/: CMakeLists.txt  PriceCalculator.cpp  PriceCalculator.h  PriceCalculatorBisection.cpp  PriceCalculatorBisection.h  PriceCalculatorCross.cpp  PriceCalculatorCross.h  PriceCalculatorFW.cpp  PriceCalculatorFW.h  PriceCalculatorGeneral.cpp  PriceCalculatorGeneral.h  PriceCalculatorHarras.cpp  PriceCalculatorHarras.h  PriceCalculatorHarrasNoise.cpp  PriceCalculatorHarrasNoise.h  PriceCalculatorLLS.cpp  PriceCalculatorLLS.h  PriceCalculatorLLS1.cpp  PriceCalculatorLLS1.h  PriceCalculatorLLSNoise.cpp  PriceCalculatorLLSNoise.h
src/QuantitiesOfInterest/: CMakeLists.txt  QoiCalculator.cpp  QoiCalculator.h  QoiCalculatorAutocorrelation.cpp  QoiCalculatorAutocorrelation.h  QoiCalculatorExcessKurtosis.cpp  QoiCalculatorExcessKurtosis.h  QoiCalculatorFull.cpp  QoiCalculatorFull.h  QoiCalculatorHill.cpp  QoiCalculatorHill.h  QoiCalculatorKurtosis.cpp  QoiCalculatorKurtosis.h  QoiCalculatorMaximum.cpp  QoiCalculatorMaximum.h  QoiCalculatorMean.cpp  QoiCalculatorMean.h  QoiCalculatorMinimum.cpp  QoiCalculatorMinimum.h  QoiCalculatorMoment.cpp  QoiCalculatorMoment.h  QoiCalculatorQuantile.cpp  QoiCalculatorQuantile.h  QoiCalculatorSkew.cpp  QoiCalculatorSkew.h  QoiCalculatorVariance.cpp  QoiCalculatorVariance.h  QuantitiesOfInterest.cpp  QuantitiesOfInterest.h  QuantityOfInterest.cpp  QuantityOfInterest.h
src/RandomGenerator/: CMakeLists.txt  RandomGenerator.cpp  RandomGenerator.h  RandomGeneratorFromFile.cpp  RandomGeneratorFromFile.h  RandomGeneratorIntelMKL.cpp  RandomGeneratorIntelMKL.h  RandomGeneratorNAG.cpp  RandomGeneratorNAG.h  RandomGeneratorRANDU.cpp  RandomGeneratorRANDU.h  RandomGeneratorStdLib.cpp  RandomGeneratorStdLib.h  RandomGeneratorStdLibOld.cpp  RandomGeneratorStdLibOld.h  RandomNumberPool.cpp  RandomNumberPool.h
src/StockExchange/: CMakeLists.txt  StockExchange.cpp  StockExchange.h
src/Switching/: CMakeLists.txt  LLSGroup.h  RelativeAttractivenessCalculator.cpp  RelativeAttractivenessCalculator.h  ShareCalculator.cpp  ShareCalculator.h  Switchable.h
src/Util/: CMakeLists.txt  Util.h
src/VariableContainer/: CMakeLists.txt  (+12 more)
test/: CMakeLists.txt  mainTest.cpp
(+236 files in other folders)
